// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`output > outputHeader > should output a header with A title with an odd length! 1`] = `
[
  "
╔═══════════════════════════════════╗
║         [1m[48;2;49;120;198m      [49m[22m    [1m[48;2;240;219;79m      [49m[22m          ║
║         [1m[48;2;49;120;198m[38;2;255;255;255m   TS [39m[49m[22m vs [1m[48;2;240;219;79m[38;2;0;0;0m   JS [39m[49m[22m          ║
║                                   ║
║    [1mA title with an odd length![22m    ║
╚═══════════════════════════════════╝
",
]
`;

exports[`output > outputHeader > should output a header with Another Title 1`] = `
[
  "
╔════════════════════════╗
║    [1m[48;2;49;120;198m      [49m[22m    [1m[48;2;240;219;79m      [49m[22m    ║
║    [1m[48;2;49;120;198m[38;2;255;255;255m   TS [39m[49m[22m vs [1m[48;2;240;219;79m[38;2;0;0;0m   JS [39m[49m[22m    ║
║                        ║
║     [1mAnother Title[22m      ║
╚════════════════════════╝
",
]
`;

exports[`output > outputHeader > should output a header with Title 1`] = `
[
  "
╔════════════════════════╗
║    [1m[48;2;49;120;198m      [49m[22m    [1m[48;2;240;219;79m      [49m[22m    ║
║    [1m[48;2;49;120;198m[38;2;255;255;255m   TS [39m[49m[22m vs [1m[48;2;240;219;79m[38;2;0;0;0m   JS [39m[49m[22m    ║
║                        ║
║         [1mTitle[22m          ║
╚════════════════════════╝
",
]
`;

exports[`output > outputReport > should output a report 1`] = `
[
  "
╔════════════════════════╗
║    [1m[48;2;49;120;198m      [49m[22m    [1m[48;2;240;219;79m      [49m[22m    ║
║    [1m[48;2;49;120;198m[38;2;255;255;255m   TS [39m[49m[22m vs [1m[48;2;240;219;79m[38;2;0;0;0m   JS [39m[49m[22m    ║
║                        ║
║         [1mTitle[22m          ║
╚════════════════════════╝
",
]
`;

exports[`output > outputReport > should output a report 2`] = `
[
  "[90m┌─────────────[39m[90m┬────────[39m[90m┬─────[39m[90m┬─────[39m[90m┬───────[39m[90m┬────────[39m[90m┬─────────┐[39m
[90m│[39m[31m [1m[94mFile Type[31m[22m   [39m[90m│[39m[31m [1m[94mMetric[31m[22m [39m[90m│[39m[31m [1m[43m[30m JS[31m[49m[22m [39m[90m│[39m[31m [1m[44m[37m TS[31m[49m[22m [39m[90m│[39m[31m [1m[94mTotal[31m[22m [39m[90m│[39m[31m [1m[44m[37m TS[31m[49m [94m%[31m[22m  [39m[90m│[39m[31m [1m[94mRating[31m[22m  [39m[90m│[39m
[90m├─────────────[39m[90m┼────────[39m[90m┼─────[39m[90m┼─────[39m[90m┼───────[39m[90m┼────────[39m[90m┼─────────┤[39m
[90m│[39m Plain JS/TS [90m│[39m Files  [90m│[39m 4   [90m│[39m 6   [90m│[39m 10    [90m│[39m [1m[48;2;51;51;0m[38;2;255;255;0m60.00%[39m[49m[22m [90m│[39m         [90m│[39m
[90m│[39m             [90m├────────[39m[90m┼─────[39m[90m┼─────[39m[90m┼───────[39m[90m┼────────[39m[90m┤[39m [1m[48;2;51;51;0m[38;2;255;255;0mGood[39m[49m[22m 👍 [90m│[39m
[90m│[39m             [90m│[39m LoC    [90m│[39m 6   [90m│[39m 8   [90m│[39m 14    [90m│[39m [1m[48;2;51;51;0m[38;2;255;255;0m70.00%[39m[49m[22m [90m│[39m         [90m│[39m
[90m├─────────────[39m[90m┼────────[39m[90m┼─────[39m[90m┼─────[39m[90m┼───────[39m[90m┼────────[39m[90m┼─────────┤[39m
[90m│[39m Vue SFC     [90m│[39m Files  [90m│[39m 7   [90m│[39m 9   [90m│[39m 16    [90m│[39m [1m[48;2;51;26;0m[38;2;255;165;0m56.25%[39m[49m[22m [90m│[39m         [90m│[39m
[90m│[39m             [90m├────────[39m[90m┼─────[39m[90m┼─────[39m[90m┼───────[39m[90m┼────────[39m[90m┤[39m [1m[48;2;51;51;0m[38;2;255;255;0mGood[39m[49m[22m 👍 [90m│[39m
[90m│[39m             [90m│[39m LoC    [90m│[39m 12  [90m│[39m 16  [90m│[39m 28    [90m│[39m [1m[48;2;51;77;0m[38;2;173;255;47m75.00%[39m[49m[22m [90m│[39m         [90m│[39m
[90m├─────────────[39m[90m┼────────[39m[90m┼─────[39m[90m┼─────[39m[90m┼───────[39m[90m┼────────[39m[90m┼─────────┤[39m
[90m│[39m [1mOVERALL[22m     [90m│[39m [1mFiles[22m  [90m│[39m [1m11[22m  [90m│[39m [1m15[22m  [90m│[39m [1m26[22m    [90m│[39m [1m[1m[48;2;51;26;0m[38;2;255;165;0m57.69%[39m[49m[22m[1m[22m [90m│[39m         [90m│[39m
[90m│[39m             [90m├────────[39m[90m┼─────[39m[90m┼─────[39m[90m┼───────[39m[90m┼────────[39m[90m┤[39m [1m[1m[48;2;51;26;0m[38;2;255;165;0mFair[39m[49m[22m[1m 🤏[22m [90m│[39m
[90m│[39m             [90m│[39m [1mLoC[22m    [90m│[39m [1m18[22m  [90m│[39m [1m24[22m  [90m│[39m [1m1000[22m  [90m│[39m [1m[1m[48;2;51;51;0m[38;2;255;255;0m60.00%[39m[49m[22m[1m[22m [90m│[39m         [90m│[39m
[90m└─────────────[39m[90m┴────────[39m[90m┴─────[39m[90m┴─────[39m[90m┴───────[39m[90m┴────────[39m[90m┴─────────┘[39m",
]
`;

exports[`output > outputReport > should output a report 3`] = `
[
  "[1m[34m[39m[22m
[1m[34mSummary[39m[22m
[1m[34m―――――――[39m[22m",
]
`;

exports[`output > outputReport > should output a report 4`] = `
[
  "Overall, [1m[1m[48;2;51;26;0m[38;2;255;165;0m57.69%[39m[49m[22m[1m[22m of files and [1m[1m[48;2;51;51;0m[38;2;255;255;0m60.00%[39m[49m[22m[1m[22m of lines of code (LoC) are written in TypeScript, earning a [1m[1m[48;2;51;26;0m[38;2;255;165;0mFair[39m[49m[22m[1m 🤏[22m rating for file coverage and a [1m[48;2;51;51;0m[38;2;255;255;0mGood[39m[49m[22m 👍 rating for LoC coverage.",
]
`;

exports[`output > outputReport > should output a report with no files found 1`] = `
[
  "[31m🙅 No JavaScript or TypeScript files found in the directory[39m",
]
`;

exports[`output > outputReportSummary > should output a report summary 1`] = `
[
  "[1m[34m[39m[22m
[1m[34mSummary[39m[22m
[1m[34m―――――――[39m[22m",
]
`;

exports[`output > outputReportSummary > should output a report summary 2`] = `
[
  "Overall, [1m[1m[48;2;51;51;0m[38;2;255;255;0m60.00%[39m[49m[22m[1m[22m of files and [1m[1m[48;2;51;51;0m[38;2;255;255;0m60.00%[39m[49m[22m[1m[22m of lines of code (LoC) are written in TypeScript, earning a [1m[1m[48;2;51;51;0m[38;2;255;255;0mGood[39m[49m[22m[1m 👍[22m rating for file coverage and a [1m[48;2;51;51;0m[38;2;255;255;0mGood[39m[49m[22m 👍 rating for LoC coverage.",
]
`;

exports[`output > outputSubheader > should output a subheader 1`] = `
[
  "[1m[34m[39m[22m
[1m[34mSubheader[39m[22m
[1m[34m―――――――――[39m[22m",
]
`;
